--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <!-- Row 2: Compose Message Button -->
 <div class="row">
     <div class= "col">
-        <button class="btn btn-primary">Compose Message</button>
-        <br></br>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#composeModal">Compose Message</button>
+        <br>
 </div>
 </div>
 
@@ -74,12 +74,12 @@
     <div class="row border">
         <div class="col">
 <!-- Search Input -->
-<input type="text" class="'form-control" placeholder="Search Mail">
+<input type="text" class="form-control" placeholder="Search Mail">
         </div>
     </div>
 
     <!--Sample E-mails  -->
-    <div class="row border">
+    <div class="row border email-info">
         <div class="col">
             <P><strong>Sender:</strong>John Doe</P>
             <p><strong>Subject:</strong>Meeting Reminder</p>
@@ -87,7 +87,7 @@
             <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
 </div>
 </div>
-<div class="row border">
+<div class="row border email-info">
     <div class="col">
         <P><strong>Sender:</strong>John Doe</P>
         <p><strong>Subject:</strong>Meeting Reminder</p>
@@ -95,7 +95,7 @@
         <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
 </div>
 </div>
-<div class="row border">
+<div class="row border email-info">
     <div class="col">
         <P><strong>Sender:</strong>John Doe</P>
         <p><strong>Subject:</strong>Meeting Reminder</p>
@@ -103,7 +103,7 @@
         <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
 </div>
 </div>
-<div class="row border">
+<div class="row border email-info">
     <div class="col">
         <P><strong>Sender:</strong>John Doe</P>
         <p><strong>Subject:</strong>Meeting Reminder</p>
@@ -111,7 +111,15 @@
         <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
 </div>
 </div>
-<div class="row border">
+<div class="row border email-info">
+    <div class="col">
+        <P><strong>Sender:</strong>John Doe</P>
+        <p><strong>Subject:</strong>Meeting Reminder</p>
+        <p><strong>Date:</strong>Sep 22, 2023</p>
+        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
+</div>
+</div>
+<div class="row border email-info">
     <div class="col">
         <P><strong>Sender:</strong>John Doe</P>
         <p><strong>Subject:</strong>Meeting Reminder</p>
@@ -120,17 +128,102 @@
 </div>
 </div>
 
+<div class="row border email-info">
+    <div class="col">
+        <P><strong>Sender:</strong>John Doe</P>
+        <p><strong>Subject:</strong>Meeting Reminder</p>
+        <p><strong>Date:</strong>Sep 22, 2023</p>
+        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
+</div>
+</div>
+<div class="row border email-info">
+    <div class="col">
+        <P><strong>Sender:</strong>John Doe</P>
+        <p><strong>Subject:</strong>Meeting Reminder</p>
+        <p><strong>Date:</strong>Sep 22, 2023</p>
+        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
+</div>
+</div>
+<div class="row border email-info">
+    <div class="col">
+        <P><strong>Sender:</strong>John Doe</P>
+        <p><strong>Subject:</strong>Meeting Reminder</p>
+        <p><strong>Date:</strong>Sep 22, 2023</p>
+        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
+</div>
+</div>
+<div class="row border email-info">
+    <div class="col">
+        <P><strong>Sender:</strong>John Doe</P>
+        <p><strong>Subject:</strong>Meeting Reminder</p>
+        <p><strong>Date:</strong>Sep 22, 2023</p>
+        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
+</div>
+</div>
+<p class="text-center">No New Messages</p>
 
 </div>
 
 
+<!-- Third column, read and reply to e-mails -->
+<div class="col third-column border border-dark">
+    <div class="row">
+        <button>Back</button>
+        <button>Trash</button>
+        <button>Forward</button>
+        <button>Archive</button>
+    </div>
 
-<div class="col-md-4 border">Right Column</div>
-    
+    <!-- E-mail details -->
+    <div class="row email-info e-mail-details">
+    <h2>Subject: Meeting Reminder</h2>
+    <p>Date: Sep 22, 2023</p>
+    <p>Sender: John Doe</p>
+    <p>Recipient: Jane Doe</p>
+</div>
+<br>
+
+<!-- E-mail Body -->
+<div class="row email-message">
+<p>Dear Jane,</p>
+<p>Don't forget about our meeting tomorrow night at 8:00PM</p>
+<p>Warm regards,</p>
+<p>John</p>
 
 </div>
+<!-- Response area -->
+<div class="row reply-area">
+<textarea placeholder="Type your response here..."></textarea>
+<button>Send</button>
+</div>
+</div>
+
+<!-- Modal for Compose Window -->
+<div class="modal fade" id="composeModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Compose Email</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal">
+            <span>&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <input type="text" class="form-control" placeholder="Recipient">
+          <input type="text" class="form-control" placeholder="Your Name">
+          <input type="text" class="form-control" placeholder="Subject">
+          <textarea class="form-control" placeholder="Message"></textarea>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
+          <button type="button" class="btn btn-primary">Send</button>
+        </div>
+      </div>
+    </div>
   </div>
 
+  </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
