added background color to show selected e-mail

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <!--Sample E-mails  -->
-    <div class="row border email-info">
+    <div class="row border email-info border-dark selected">
         <div class="col">
             <p><strong>Sender:</strong>John Doe</P>
             <p><strong>Subject:</strong>Meeting Reminder</p>
