--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="row h-100">
 
 <!-- First Column -->
-<div class="col-lg-3 col-md-0 col-sm-0 border border-dark">
+<div class="col-lg-3 border border-dark">
 <!--Row 1 Logo and Title  -->
     <div class="row">
  <div class= "col d-flex align-items-center">
@@ -122,7 +122,7 @@
 </div>
 
 <!-- Third column, read and reply to e-mails -->
-<div class="col-lg-6 col-md-6 col-sm-0 border border-dark">
+<div class="col-lg-6 col-md-6 border border-dark">
     <div class="btn-group w-100">
         <button type="button" class="btn btn-outline-secondary">Back</button>
         <button type="button" class="btn btn-outline-secondary">Trash</button>
