Small text change - final draft

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <!-- E-mail Body -->
 <div class="row email-message">
 <p>Dear Jane,</p>
-<p>Don't forget about our meeting tomorrow night at 8:00PM</p>
+<p>Don't forget about our meeting tomorrow night at 8:00PM.</p>
 <p>Warm regards,</p>
 <p>John</p>
 
