Added list-group class to e-mail list and simplified code.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
 
 <!-- Row 2: Compose Message Button -->
 
-
-
 <div class="d-grid gap-1">
     <button type="button" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#composeModal">Compose Message</button>
 
@@ -51,72 +49,57 @@
     </div>
 
     <!--Sample E-mails  -->
-    <div class="row border email-info border-dark selected">
-        <div class="col">
-            <p><strong>Sender:</strong>John Doe</P>
-            <p><strong>Subject:</strong>Meeting Reminder</p>
-            <p><strong>Date:</strong>Sep 22, 2023</p>
-            <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
+    <div class="list-group">
+    <div class="active list-group-item list-group-item-action border email-info ">
+            <p><strong>Sender: </strong>John Doe</P>
+            <p><strong>Subject: </strong>Meeting Reminder</p>
+            <p><strong>Date: </strong>Sep 22, 2023</p>
+            <p><strong>Preview: </strong>Just a friendly reminder about our meeting...</p>
 </div>
+<div class="list-group-item list-group-item-action border email-info">
+        <p><strong>Sender: </strong>John Doe</P>
+        <p><strong>Subject: </strong>Meeting Reminder</p>
+        <p><strong>Date: </strong>Sep 22, 2023</p>
+        <p><strong>Preview: </strong>Just a friendly reminder about our meeting...</p>
 </div>
-<div class="row border email-info">
-    <div class="col">
-        <p><strong>Sender:</strong>John Doe</P>
-        <p><strong>Subject:</strong>Meeting Reminder</p>
-        <p><strong>Date:</strong>Sep 22, 2023</p>
-        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
+<div class="list-group-item list-group-item-action border email-info">
+        <p><strong>Sender: </strong>John Doe</P>
+        <p><strong>Subject: </strong>Meeting Reminder</p>
+        <p><strong>Date: </strong>Sep 22, 2023</p>
+        <p><strong>Preview: </strong>Just a friendly reminder about our meeting...</p>
 </div>
+<div class="list-group-item list-group-item-action border email-info">
+        <p><strong>Sender: </strong>John Doe</P>
+        <p><strong>Subject: </strong>Meeting Reminder</p>
+        <p><strong>Date: </strong>Sep 22, 2023</p>
+        <p><strong>Preview: </strong>Just a friendly reminder about our meeting...</p>
 </div>
-<div class="row border email-info">
-    <div class="col">
-        <p><strong>Sender:</strong>John Doe</P>
-        <p><strong>Subject:</strong>Meeting Reminder</p>
-        <p><strong>Date:</strong>Sep 22, 2023</p>
-        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
+<div class="list-group-item list-group-item-action border email-info">
+        <p><strong>Sender: </strong>John Doe</P>
+        <p><strong>Subject: </strong>Meeting Reminder</p>
+        <p><strong>Date: </strong>Sep 22, 2023</p>
+        <p><strong>Preview: </strong>Just a friendly reminder about our meeting...</p>
 </div>
-</div>
-<div class="row border email-info">
-    <div class="col">
-        <p><strong>Sender:</strong>John Doe</P>
-        <p><strong>Subject:</strong>Meeting Reminder</p>
-        <p><strong>Date:</strong>Sep 22, 2023</p>
-        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
-</div>
-</div>
-<div class="row border email-info">
-    <div class="col">
-        <p><strong>Sender:</strong>John Doe</P>
-        <p><strong>Subject:</strong>Meeting Reminder</p>
-        <p><strong>Date:</strong>Sep 22, 2023</p>
-        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
-</div>
-</div>
-<div class="row border email-info">
-    <div class="col">
-        <P><strong>Sender:</strong>John Doe</P>
-        <p><strong>Subject:</strong>Meeting Reminder</p>
-        <p><strong>Date:</strong>Sep 22, 2023</p>
-        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
-</div>
+<div class="list-group-item list-group-item-action border email-info">
+        <P><strong>Sender: </strong>John Doe</P>
+        <p><strong>Subject: </strong>Meeting Reminder</p>
+        <p><strong>Date: </strong>Sep 22, 2023</p>
+        <p><strong>Preview: </strong>Just a friendly reminder about our meeting...</p>
 </div>
 
-<div class="row border email-info">
-    <div class="col">
-        <P><strong>Sender:</strong>John Doe</P>
-        <p><strong>Subject:</strong>Meeting Reminder</p>
-        <p><strong>Date:</strong>Sep 22, 2023</p>
-        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
+<div class="list-group-item list-group-item-action border email-info">
+        <P><strong>Sender: </strong>John Doe</P>
+        <p><strong>Subject: </strong>Meeting Reminder</p>
+        <p><strong>Date: </strong>Sep 22, 2023</p>
+        <p><strong>Preview: </strong>Just a friendly reminder about our meeting...</p>
+</div>
+<div class="list-group-item list-group-item-action border email-info">
+        <P><strong>Sender: </strong>John Doe</P>
+        <p><strong>Subject: </strong>Meeting Reminder</p>
+        <p><strong>Date: </strong>Sep 22, 2023</p>
+        <p><strong>Preview: </strong>Just a friendly reminder about our meeting...</p>
 </div>
 </div>
-<div class="row border email-info">
-    <div class="col">
-        <P><strong>Sender:</strong>John Doe</P>
-        <p><strong>Subject:</strong>Meeting Reminder</p>
-        <p><strong>Date:</strong>Sep 22, 2023</p>
-        <p><strong>Preview:</strong>Just a friendly reminder about our meeting...</p>
-</div>
-</div>
-
 <p class="text-center">No New Messages</p>
 
 </div>
