--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 <!-- Second Column: Email's populating -->
 <div class="col-lg-3 col-md-6 col-sm-12 border">
-    <div class="row border">
+    <div class="row">
         <div class="col">
 <!-- Search Input -->
 <input type="text" class="form-control" placeholder="Search Mail">
